deploy/kubernetes/web/new-ops-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-ops-web
  annotations:
    hequan2017/new-ops: ui
    github: "https://github.com/hequan2017/new-ops.git"
    app.kubernetes.io/version: 0.0.1
  labels:
    app: new-ops-web
    version: new-ops-vue3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-ops-web
      version: new-ops-vue3
  template:
    metadata:
      labels:
        app: new-ops-web
        version: new-ops-vue3
    spec:
      containers:
        - name: new-ops-nginx-container
          image: registry.cn-hangzhou.aliyuncs.com/gva/web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: nginx-config
      volumes:
        - name: nginx-config
          configMap:
            name: my.conf
