deploy/kubernetes/web/new-ops-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-ops-web
  annotations:
    hequan2017/new-ops: ui
    github: "https://github.com/hequan2017/new-ops.git"
    app.kubernetes.io/version: 0.0.1
  labels:
    app: new-ops-web
    version: new-ops-vue3
spec:
#  type: NodePort
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: new-ops-web
    version: new-ops-vue3
